--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,16 +4,16 @@ services:
   app:
     image: embraslabs/ruby:3.0.0
     container_name: pessoas-api
-    command: bash -c "rm -f tmp/pids/server.pid && bundle install && bundle exec rails s -p 3010 -b '0.0.0.0'"
+    user: labs:labs
     stdin_open: true
     tty: true
     depends_on:
       - postgres
       - redis
     ports:
-      - 3010:3010
+      - 3010:3000
     volumes:
-      - .:/app
+      - .:/project
       - gems:/.gems
     environment:
       - SECRET_KEY_BASE=development
