--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -31,6 +31,8 @@ services:
     image: postgres:13.0-alpine
     environment:
       POSTGRES_PASSWORD: postgres
+    ports:
+      - 5333:5432
     volumes:
       - postgres:/var/lib/postgresql/data
 
