--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,9 +7,6 @@ services:
     user: labs:labs
     stdin_open: true
     tty: true
-    depends_on:
-      - postgres
-      - redis
     ports:
       - 3010:3000
     volumes:
@@ -19,28 +16,13 @@ services:
       - SECRET_KEY_BASE=development
       - RAILS_ENV=development
       - PORT=3000
-      - DATABASE_NAME=pessoas1
-      - DATABASE_HOST=postgres
-      - DATABASE_USERNAME=postgres
-      - DATABASE_PASSWORD=postgres
-      - REDIS_URL=redis://redis:6379
+      - DATABASE_NAME=${DATABASE_NAME}
+      - DATABASE_HOST=${DATABASE_HOST}
+      - DATABASE_PORT=${DATABASE_PORT}
+      - DATABASE_USERNAME=${DATABASE_USERNAME}
+      - DATABASE_PASSWORD=${DATABASE_PASSWORD}
     env_file:
       - .env
 
-  postgres:
-    image: postgres:13.0-alpine
-    environment:
-      POSTGRES_PASSWORD: postgres
-    volumes:
-      - postgres:/var/lib/postgresql/data
-
-  redis:
-    image: redis:6.0.8-alpine
-    command: redis-server
-    volumes:
-      - redis:/data
-
 volumes:
   gems:
-  postgres:
-  redis:
